yeah good luck figuring that one out yourself just kidding database : added 2 games, 6 players and their highscore data Snake and CannibalSnake : changed back getFirst() and getLast() calls since they don't work for me for some reason PortalSnake : new Snake subclass for new gamemode Processing : added 2 gamemodes; rewrote switch(currentGame) to using currentGame.ordinal() where possible; play and leaderboard buttons are now initialized in a loop and stored in respective arrays; active player is now displayed on leaderboard even if not in top 10